Sutter Health/src/objects/PDV_EAF_Facility__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>ADDRESS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Address_Element_Result_Status__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Address Element Result Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AD_Address_Mailability_Score__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Address Mailability Score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AD_Address_Process_Status__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Address Process Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AD_Address_Result_Percentage__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Address Result Percentage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AD_Address_Verification_Status__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Address Verification Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Element_Result_status__c</fullName>
        <description>used for suggested addresses.</description>
        <label>AD Element Result status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>used to store address line 1</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>used to store address line 2</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Modified__c</fullName>
        <label>Address Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>used to store facility assigned date to the agent.</description>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>EAF Facilities</relationshipLabel>
        <relationshipName>EAF_Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>used to store facility validated date.</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to decline fax</description>
        <label>Decline Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decline_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to decline phone</description>
        <label>Decline Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emp_Id__c</fullName>
        <description>Emp Id for EAF search</description>
        <label>Emp Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <label>External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAX_NUMBER__c</fullName>
        <label>FAX NUMBER</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <label>Facility ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Address__c</fullName>
        <description>used to store formatted suggested address.</description>
        <label>Formatted Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Address_Chagned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to capture address change</description>
        <label>Is Address Chagned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address_Line_2_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if address line 2 changed.</description>
        <label>Is Address Line 2 Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_City_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if city changed.</description>
        <label>Is City Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fax_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if fax changed.</description>
        <label>Is Fax Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if phone changed.</description>
        <label>Is Phone Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Extension_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if phone extension changed.</description>
        <label>Is Phone Extension Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_State_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if state changed.</description>
        <label>Is State Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Zip_Code_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to capture if zip code changed.</description>
        <label>Is Zip Code Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Verified_date__c</fullName>
        <label>Last Verified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Names_Changes_Suggested__c</fullName>
        <label>Names Changes Suggested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDI_Campaign__c</fullName>
        <description>used to capture current campaign.</description>
        <label>PDI Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHONE__c</fullName>
        <label>PHONE</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Address__c</fullName>
        <description>Field to store Facility Printed street Address</description>
        <label>Printed Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_City__c</fullName>
        <description>Field to store Facility Printed City</description>
        <label>Printed City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Floor__c</fullName>
        <description>Field to store Facility Printed Floor</description>
        <label>Printed Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Name__c</fullName>
        <description>Field to store Facility Printed Name</description>
        <label>Printed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_State__c</fullName>
        <description>Field to store Facility Printed State</description>
        <label>Printed State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Suite__c</fullName>
        <description>Field to store Facility Printed Suite</description>
        <label>Printed Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Zip_Code__c</fullName>
        <description>Field to store Facility Printed Zip Code</description>
        <label>Printed Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Serial Number for Facility address and need to be unique at provider level and should be incremented for new addressrecords</description>
        <label>S#</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to show the facility validation status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Validated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_ByPass_Address_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to By pass address verification in eaf validation</description>
        <label>ByPass Address Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Current_Campaign__c</fullName>
        <description>used to filter EAF records based on current campaign.</description>
        <formula>IF(AND(NOT( ISBLANK( PDI_Campaign__c ) ), TRIM( PDI_Campaign__c ) = TRIM( $Label.CL176_PDI_Current_Campaign_Name )) , &apos;Current Campaign&apos; , &apos;&apos;)</formula>
        <label>Tech Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_is_Facility_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>used to control the is changed flags.</description>
        <label>Tech is Facility Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE__c</fullName>
        <label>ZIP CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EAF Facility</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NCMA</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Facilities</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Closed Facilities</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Facilities</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted,Non-Validated</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Open Facilities</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Closed_Facilities</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Team Closed Facilities</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Open_Facilities</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Team Open Facilities</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Validated_Facilities_PDV_EAF_Facility</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Non Validated Facilities</label>
        <queue>Non_Validated_Facilities</queue>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Validated_Facilities</fullName>
        <columns>NAME</columns>
        <columns>PHONE__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CODE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <filters>
            <field>Tech_Current_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Validated Facilities</label>
        <sharedTo>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAF Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>